fixed the stupid breaking I did last commit; changed footer text to a readable steel grey color

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -71,3 +71,6 @@ table{
 	border-radius:3px;
 	padding:10px;	
 }
+.whitetext{
+	color:white;
+}
